# dial-mind-map-backend

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  pyproject.toml
common_utils/: context.py  logger_config.py  misc.py
dial_rag/: aidial_to_langchain.py  app.py  attachment_link.py  batched.py  commands.py  content_stream.py  dial_config.py  dial_user_limits.py  document_loaders.py  document_record.py  documents.py  errors.py  index_record.py  index_storage.py  keywords_search.py  llm.py  print_stats.py  qa_chain.py  query_chain.py  request_context.py  resource_counter.py  retrievers_postprocess.py  stages.py  utils.py
dial_rag/embeddings/: detect_device.py  embeddings.py  multimodal_embeddings.py
dial_rag/image_processor/: base64.py  document_image_extractor.py  extract_pages.py  image_page_image_extractor.py  pdf_page_image_extractor.py  resize.py
dial_rag/resources/: cpu_pools.py  dial_limited_resources.py
dial_rag/retrievers/: all_documents_retriever.py  async_retriever.py  bm25_retriever.py  embeddings_index.py  multimodal_retriever.py  page_image_retriever_utils.py  semantic_retriever.py
dial_rag/retrievers/description_retriever/: answer_details.py  description_retriever.py  page_description.py  prompts.py  query_info.py  query_params.py
general_mindmap/models/: attachment.py  graph.py  request.py
general_mindmap/pptx/: converter.py
general_mindmap/utils/: cards_retriever.py  dial_api.py  docstore.py  errors.py  graph.py  graph_patch.py  labels.py  log_config.py  match.py  rag_eval_utils.py  streaming.py  tokens_queue.py
general_mindmap/v2/: app.py  config.py
general_mindmap/v2/completion/: app.py  dial_rag_integration.py  rag.py
general_mindmap/v2/dial/: client.py  jwt_utils.py
general_mindmap/v2/generator/: base.py  constants.py  exceptions.py  models.py  prompts.py  simple.py  two_step.py
general_mindmap/v2/models/: edge_type.py  metadata.py
generator/: __init__.py  mind_map_generator.py
generator/adapter/: __init__.py  base.py  gm_adapter.py
generator/cache_handler/: db.py  tools.py
generator/chainer/: __init__.py  chain_factory.py  constants.py  embedder.py  model_handler.py  prompt_templates.py  response_formats.py  structs.py  utils.py
generator/common/: constants.py  context.py  exceptions.py  interfaces.py  llm.py  logger.py  misc.py  package_configurator.py  structs.py  type_vars.py
generator/core/: __init__.py  pipelines.py  structs.py
generator/utils/: code_analysis.py  configurator.py  constants.py  context.py  dial.py  exceptions.py  frontend_handler.py  logger.py  misc.py  pptx_handler.py  str_utils.py  task_utils.py  web_handler.py
models/: match.model
scripts/: download_model.py
(+81 files in other folders)
